// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loading spinner matches the snapshot 1`] = `
<div>
  <PageHeader>
    <h1>
      Operators
    </h1>
    <SearchFilter
      className="margin-l-big"
      onChange={[Function]}
      onSubmit={[MockFunction]}
      placeholder="search operators..."
      value=""
    />
  </PageHeader>
  <main>
    <MessageAlertPage
      level="warning"
    >
      <div>
        Operators integration is under heavy development and currently in alpha state. If you find an issue please report it
         
        <a
          href="https://github.com/kubeapps/kubeapps/issues"
          rel="noopener noreferrer"
          target="_blank"
        >
          here.
        </a>
      </div>
    </MessageAlertPage>
    <LoadingWrapper
      loaded={false}
      type={0}
    >
      <OLMNotFound />
    </LoadingWrapper>
  </main>
</div>
`;

exports[`render the operator list with installed operators 1`] = `
<div>
  <PageHeader>
    <h1>
      Operators
    </h1>
    <SearchFilter
      className="margin-l-big"
      onChange={[Function]}
      onSubmit={[MockFunction]}
      placeholder="search operators..."
      value=""
    />
  </PageHeader>
  <main>
    <MessageAlertPage
      level="warning"
    >
      <div>
        Operators integration is under heavy development and currently in alpha state. If you find an issue please report it
         
        <a
          href="https://github.com/kubeapps/kubeapps/issues"
          rel="noopener noreferrer"
          target="_blank"
        >
          here.
        </a>
      </div>
    </MessageAlertPage>
    <LoadingWrapper
      loaded={true}
      type={0}
    >
      <div
        className="row margin-t-big"
      >
        <div
          className="col-2 margin-t-big horizontal-column"
        >
          <div
            className="margin-b-normal "
          >
            <b>
              Categories
            </b>
          </div>
          <div
            className="margin-v-normal "
          >
            <b>
              Capability Level
            </b>
          </div>
          <div
            key="Basic Install"
          >
            <label
              className="checkbox"
              key="Basic Install"
              onChange={[Function]}
            >
              <input
                type="checkbox"
              />
              <span>
                Basic Install
              </span>
            </label>
          </div>
          <div
            key="Seamless Upgrades"
          >
            <label
              className="checkbox"
              key="Seamless Upgrades"
              onChange={[Function]}
            >
              <input
                type="checkbox"
              />
              <span>
                Seamless Upgrades
              </span>
            </label>
          </div>
          <div
            key="Full Lifecycle"
          >
            <label
              className="checkbox"
              key="Full Lifecycle"
              onChange={[Function]}
            >
              <input
                type="checkbox"
              />
              <span>
                Full Lifecycle
              </span>
            </label>
          </div>
          <div
            key="Deep Insights"
          >
            <label
              className="checkbox"
              key="Deep Insights"
              onChange={[Function]}
            >
              <input
                type="checkbox"
              />
              <span>
                Deep Insights
              </span>
            </label>
          </div>
          <div
            key="Auto Pilot"
          >
            <label
              className="checkbox"
              key="Auto Pilot"
              onChange={[Function]}
            >
              <input
                type="checkbox"
              />
              <span>
                Auto Pilot
              </span>
            </label>
          </div>
        </div>
        <div
          className="col-10"
        >
          <div
            className="padding-l-normal"
          >
            <h3>
              Installed
            </h3>
            <CardGrid>
              <InfoCard
                icon="api/v1/namespaces/default/operator/foo/logo"
                info="v1.0.0"
                key="foo"
                link="/c/default/ns/default/operators/foo"
                tag1Content="security"
                tag2Content="kubeapps"
                title="foo"
              />
            </CardGrid>
            <h3>
              Available Operators
            </h3>
            <CardGrid />
          </div>
        </div>
      </div>
    </LoadingWrapper>
  </main>
</div>
`;

exports[`render the operator list without installed operators 1`] = `
<div>
  <PageHeader>
    <h1>
      Operators
    </h1>
    <SearchFilter
      className="margin-l-big"
      onChange={[Function]}
      onSubmit={[MockFunction]}
      placeholder="search operators..."
      value=""
    />
  </PageHeader>
  <main>
    <MessageAlertPage
      level="warning"
    >
      <div>
        Operators integration is under heavy development and currently in alpha state. If you find an issue please report it
         
        <a
          href="https://github.com/kubeapps/kubeapps/issues"
          rel="noopener noreferrer"
          target="_blank"
        >
          here.
        </a>
      </div>
    </MessageAlertPage>
    <LoadingWrapper
      loaded={true}
      type={0}
    >
      <div
        className="row margin-t-big"
      >
        <div
          className="col-2 margin-t-big horizontal-column"
        >
          <div
            className="margin-b-normal "
          >
            <b>
              Categories
            </b>
          </div>
          <div
            className="margin-v-normal "
          >
            <b>
              Capability Level
            </b>
          </div>
          <div
            key="Basic Install"
          >
            <label
              className="checkbox"
              key="Basic Install"
              onChange={[Function]}
            >
              <input
                type="checkbox"
              />
              <span>
                Basic Install
              </span>
            </label>
          </div>
          <div
            key="Seamless Upgrades"
          >
            <label
              className="checkbox"
              key="Seamless Upgrades"
              onChange={[Function]}
            >
              <input
                type="checkbox"
              />
              <span>
                Seamless Upgrades
              </span>
            </label>
          </div>
          <div
            key="Full Lifecycle"
          >
            <label
              className="checkbox"
              key="Full Lifecycle"
              onChange={[Function]}
            >
              <input
                type="checkbox"
              />
              <span>
                Full Lifecycle
              </span>
            </label>
          </div>
          <div
            key="Deep Insights"
          >
            <label
              className="checkbox"
              key="Deep Insights"
              onChange={[Function]}
            >
              <input
                type="checkbox"
              />
              <span>
                Deep Insights
              </span>
            </label>
          </div>
          <div
            key="Auto Pilot"
          >
            <label
              className="checkbox"
              key="Auto Pilot"
              onChange={[Function]}
            >
              <input
                type="checkbox"
              />
              <span>
                Auto Pilot
              </span>
            </label>
          </div>
        </div>
        <div
          className="col-10"
        >
          <div
            className="padding-l-normal"
          >
            <h3>
              Available Operators
            </h3>
            <CardGrid>
              <InfoCard
                icon="api/v1/namespaces/default/operator/foo/logo"
                info="v1.0.0"
                key="foo"
                link="/c/default/ns/default/operators/foo"
                tag1Content="security"
                tag2Content="kubeapps"
                title="foo"
              />
            </CardGrid>
          </div>
        </div>
      </div>
    </LoadingWrapper>
  </main>
</div>
`;
